# VITAL

./: .gitignore  CMakeLists.txt  README.md  config.yaml  package.xml  requirements.txt  setup.cfg  setup.py
data/: density_estimator.onnx
docs/: CONFIG.md  DEV.md
launch/: visual_infer.launch  visual_infer.launch.py
src/: evaluate.py  visual_infer.py
src/visual_landing_provider/: visual_pipeline_wrapper.py
src/visual_landing_provider/utils/: common.py  ros.py
visual_landing_provider/: evaluate.py  visual_infer_ros1.py  visual_infer_ros2.py
visual_landing_provider/vital/: visual_pipeline_wrapper.py
visual_landing_provider/vital/nn/: density_estimator.py  keypoints_detector.py  rotation_estimator.py
visual_landing_provider/vital/utils/: common.py
